# code_challenges

./: .coverage  .coveragerc  .editorconfig  .env  .flake8  .gitignore  .pylintrc  LICENSE  Pipfile  README.md  coverage.xml  fabfile.py  my.prof  pyproject.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  run.md  run.sh
.github/workflows/: dev.yml  test.yml
aoc/2022/c/day-1/: answer.c
aoc/2022/cpp/day-1/: answer.cpp  answer.cs  question.txt
aoc/2022/day-1/: answer.dyalog  answer.ipynb  answer.py  calorie_counter.py  question.md  question.txt
aoc/2022/day-1/test/: test_answer.py
aoc/2022/day-1/tests/: test_calorie_counter.py
aoc/2022/day-2/: answer.ipynb
aoc/2022/day_1/: a.dyalog  a.ipynb  a.py  answer.ipynb  answer.php  answer.py  q1.txt  q2.md  q2.txt
aoc/2022/php/day-1/: answer.php
aoc/2022/python/.conda/: python.exe.conda_trash
aoc/2022/python/Trading/: t.ipynb
aoc/2022/python/day-1/: answer.ipynb  answer.py  logic.md  question.md  question.txt
aoc/2022/python/day-2/: answer.ipynb  answer.py  question.md
aoc/2022/python/day-3/: answer.ipynb  puzzle-input.txt  question.md
aoc/2022/rust/day-1/: answer.rs
aoc/2023/day-1/: answer.ipynb  answer.py  answer1.ipynb  answer2.ipynb  answer3.ipynb
code_challenges/aoc/y2k22/day_1/: README.md  aoc_data_reader.py  calorie_counter.py  calorie_counter_array.py  calorie_counter_fn.py  calorie_counter_oop.py  calorie_counter_proc.py  calorie_counting.py  calorie_counting_oop.py  count_calories.py  count_calories_oop.py  data_config.py  data_reader.py  fake-input.txt  my.prof  puzzle-input.txt  test.py
code_challenges/aoc/y2k22/day_10/: puzzle-input.txt
code_challenges/aoc/y2k22/day_11/: rock_paper_scissors.py
code_challenges/aoc/y2k22/day_2/: sample-input.txt
code_challenges/aoc/y2k22/day_3/: README.md  rock_paper_scissors.py
code_challenges/aoc/y2k22/day_4/: README.md
test/aoc/y2k22/day_1/: test_calorie_counter_oop.py
tests/aoc/y2k22/day_1/: test_calorie_counter.py  test_calorie_counter_oop.py
tests/aoc/y2k22/day_2/: test_calorie_counter_oop.py
