[tool.poetry]
name = "code_challenges"
version = "0.1.0"
description = "A collection of code challenges and solutions | May the force be with you"
authors = ["waan <admin@waan.email>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.3"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
pytest = "^8.0.2"
black = "^24.2.0"
fabric2 = "^3.2.2"
flake8 = "^7.0.0"
pylint = "^3.1.0"
mypy = "^1.8.0"
autoflake = "^2.3.0"
icecream = "^2.1.3"
pydocstringformatter = "^0.7.3"

[tool.poetry.scripts]
autoflake = "pyproject:autoflake"
isort = "pyproject:isort"
black = "pyproject:black"
flake = "pyproject:flake"
# pylint = "pylint code_challenges"
# mypy = "mypy code_challenges"
# pytest = "pytest --cov=code_challenges --cov-report=xml"
# coverage = "coverage report"

[tool.black]
line-length =120
target-version = ['py310']
exclude = "/(\\.git|\\.devcontainer|\\.github|\\.mypy_cache|\\.pytest_cache|\\.venv|__pycache__|__init__.py)/"

[tool.pydocstringformatter]
write = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
